--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,18 @@
 {
 "compilerOptions": {
 "target": "ES2020",
-"module": "ESNext",
-"moduleResolution": "Bundler",
-"lib": ["ES2020", "DOM", "WebWorker"],
-"strict": true,
-"jsx": "react-jsx",
-"noEmit": true,
-"types": [],
-"skipLibCheck": true,
-"forceConsistentCasingInFileNames": true,
-"baseUrl": ".",
-"paths": {}
+  "module": "ESNext",
+  "moduleResolution": "Bundler",
+  "lib": ["ES2020", "DOM", "WebWorker"],
+  "strict": true,
+  "jsx": "react-jsx",
+  "noEmit": true,
+  "types": [],
+  "skipLibCheck": true,
+  "forceConsistentCasingInFileNames": true,
+  "baseUrl": ".",
+  "paths": {},
+  "resolveJsonModule": true
 },
 "include": ["src"]
 }
