--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "preview": "vite preview --strictPort --port 4173",
     "check": "tsc --noEmit",
-    "test": "node test/relayCluster.test.js && echo \"tests completed\"",
+    "test": "vitest",
     "lint": "eslint ."
   },
   "dependencies": {
@@ -16,7 +16,9 @@
     "three": "^0.168.0"
   },
   "devDependencies": {
+    "eslint": "^9.33.0",
     "typescript": "^5.5.4",
-    "vite": "^5.4.0"
+    "vite": "^5.4.0",
+    "vitest": "^3.2.4"
   }
 }
