--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rouelibre",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "private": true,
   "type": "module",
   "scripts": {
@@ -16,6 +16,7 @@
     "three": "^0.168.0"
   },
   "devDependencies": {
+    "@types/three": "^0.179.0",
     "eslint": "^9.33.0",
     "typescript": "^5.5.4",
     "vite": "^5.4.0",
