--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rouelibre",
-  "version": "0.1.14",
+  "version": "0.1.15",
   "private": true,
   "type": "module",
   "scripts": {
@@ -17,7 +17,10 @@
   },
   "devDependencies": {
     "@types/three": "^0.179.0",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9.33.0",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.12",
     "typescript": "^5.5.4",
     "vite": "^5.4.0",
     "vitest": "^3.2.4"
