--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rouelibre",
-  "version": "0.1.15",
+  "version": "0.1.16",
   "private": true,
   "type": "module",
   "scripts": {
@@ -16,6 +16,7 @@
     "three": "^0.168.0"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.12",
     "@types/three": "^0.179.0",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.33.0",
