--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@dimforge/rapier3d-compat": "^0.13.1",
+    "flowbite": "^3.1.2",
     "three": "^0.168.0"
   },
   "devDependencies": {
