--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rouelibre",
-  "version": "0.1.45",
+  "version": "0.1.46",
   "private": true,
   "type": "module",
   "scripts": {
@@ -13,7 +13,7 @@
   },
   "dependencies": {
     "@dimforge/rapier3d-compat": "^0.13.1",
-    "flowbite": "^3.1.2",
+    "daisyui": "^5.0.50",
     "three": "^0.168.0"
   },
   "devDependencies": {
